wip: add more details to code samples

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 <CanIUseThis since={"5.37.0"} />
 
-<WhatYouWillLearn>- how to customize the Lexical editor in Page Builder.</WhatYouWillLearn>
+<WhatYouWillLearn>- how to customize the Lexical editor in Page Builder</WhatYouWillLearn>
 
 ## Overview
 
@@ -44,7 +44,7 @@ We've also attached a table of known action names at the [bottom of the article]
 
 #### Add an Action {#heading-add-action}
 
-To add a new toolbar action, use the `<LexicalEditorConfig.Heading.ToolbarAction>` component and mount it within your Admin app.
+To add a new toolbar action, use the `<Heading.ToolbarAction>` component and mount it within your Admin app.
 
 ```jsx apps/admin/src/App.tsx
 import React from "react";
@@ -84,7 +84,7 @@ const MyCustomBoldActon = () => {
   );
 };
 
-// Access the Heading element for cleaner code.
+// Access the Heading element.
 const { Heading } = LexicalEditorConfig;
 
 export const App = () => {
@@ -110,36 +110,48 @@ export const App = () => {
 To replace an existing action with a new action element, reference the existing action by name, and pass a new element via the `element` prop:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.ToolbarAction name={"bold"} element={<MyCustomBoldActon />} />
+  <Heading.ToolbarAction name={"bold"} element={<MyCustomBoldActon />} />
 </LexicalEditorConfig>
 ```
 
 #### Remove an Action {#heading-remove-action}
 
-To remove an action, reference the existing action by name, and pass a `remove` prop to the `<LexicalEditorConfig.Heading.ToolbarAction>` element:
+To remove an action, reference the existing action by name, and pass a `remove` prop to the `<Heading.ToolbarAction>` element:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.ToolbarAction name={"fontSize"} remove />
+  <Heading.ToolbarAction name={"fontSize"} remove />
 </LexicalEditorConfig>
 ```
 
 #### Position an Action {#heading-position-action}
 
-To position an existing or a new custom action, use `before` or `after` props on the `<LexicalEditorConfig.Heading.ToolbarAction>` element:
+To position an existing or a new custom action, use `before` or `after` props on the `<Heading.ToolbarAction>` element:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
   {/* Position your action before the `fontSize` action */}
-  <LexicalEditorConfig.Heading.ToolbarAction
+  <Heading.ToolbarAction
     name={"myCustomBoldActon"}
     element={<MyCustomBoldActon />}
     before={"fontSize"}
   />
 
   {/* Position the existing `fontSize` action after some other action. */}
-  <LexicalEditorConfig.Heading.ToolbarAction name={"fontSize"} after={"myCustomBoldActon"} />
+  <Heading.ToolbarAction name={"fontSize"} after={"myCustomBoldActon"} />
 </LexicalEditorConfig>
 ```
 
@@ -149,7 +161,7 @@ Plugins allow you to hook into the Lexical editor state and develop custom funct
 
 #### Add a Plugin {#heading-add-plugin}
 
-To add a new Lexical plugin, you need to use the `<LexicalEditorConfig.Heading.Plugin>` component and mount it within your Admin app.
+To add a new Lexical plugin, you need to use the `<Heading.Plugin>` component and mount it within your Admin app.
 
 ```jsx apps/admin/src/App.tsx
 function CustomFloatingLinkEditor({
@@ -227,8 +239,10 @@ function CustomFloatingLinkEditorPlugin({
   return useFloatingLinkEditorToolbar(editor, anchorElem);
 }
 
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.Plugin
+  <Heading.Plugin
     name={"customFloatingLinkEditor"}
     element={<CustomFloatingLinkEditorPlugin />}
   />
@@ -242,34 +256,46 @@ In the example above, we created a floating link popup to enable users to edit l
 To replace an existing plugin with a new plugin, reference the existing plugin by name, and pass a new element via the `element` prop:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />} />
+  <Heading.Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />} />
 </LexicalEditorConfig>
 ```
 
 #### Remove a Plugin {#heading-remove-plugin}
 
-To remove a plugin, reference the existing plugin by name, and pass a `remove` prop to the `<LexicalEditorConfig.Heading.Plugin>` element:
+To remove a plugin, reference the existing plugin by name, and pass a `remove` prop to the `<Heading.Plugin>` element:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.Plugin name={"link"} remove />
+  <Heading.Plugin name={"link"} remove />
 </LexicalEditorConfig>
 ```
 
 #### Position a Plugin {#heading-position-plugin}
 
-To position an existing or a custom plugin, use `before` or `after` props on the `<LexicalEditorConfig.Heading.Plugin>` element:
+To position an existing or a custom plugin, use `before` or `after` props on the `<Heading.Plugin>` element:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 /* Add a new plugin after the `fontSize` plugin. */
 <LexicalEditorConfig>
-    <LexicalEditorConfig.Heading.Plugin name={"newPlugin"} element={<NewPlugin />} after={"fontSize"} />
+    <Heading.Plugin name={"newPlugin"} element={<NewPlugin />} after={"fontSize"} />
 </LexicalEditorConfig>
 
 /* Position the existing plugin before some other plugin. */
 <LexicalEditorConfig>
-    <LexicalEditorConfig.Heading.Plugin name={"link"} before={"anotherPlugin"} />
+    <Heading.Plugin name={"link"} before={"anotherPlugin"} />
 </LexicalEditorConfig>
 ```
 
@@ -297,7 +323,7 @@ Please read the [official docs](https://lexical.dev/docs/concepts/nodes) to lear
 
 #### Add a Node {#heading-add-node}
 
-To add a new Lexical node, use the `<LexicalEditorConfig.Heading.Node>` component and mount it within your Admin app.
+To add a new Lexical node, use the `<Heading.Node>` component and mount it within your Admin app.
 
 ```jsx apps/admin/src/App.tsx
 import { TextNode, EditorConfig, SerializedTextNode, Spread } from "lexical";
@@ -339,8 +365,10 @@ class EmojiNode extends TextNode {
   }
 }
 
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.Node name={"emojiNode"} node={EmojiNode} />
+  <Heading.Node name={"emojiNode"} node={EmojiNode} />
 </LexicalEditorConfig>;
 ```
 
@@ -351,33 +379,41 @@ Please check the official [Lexical documentation](https://github.com/facebook/le
 To replace your custom Lexical node with a new node, reference the existing node by name, and pass a new node class via the `node` prop:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.Node name={"emojiNode"} node={MyExtendedEmojiNode} />
+  <Heading.Node name={"emojiNode"} node={MyExtendedEmojiNode} />
 </LexicalEditorConfig>
 ```
 
 #### Remove a Node {#heading-remove-node}
 
-To remove a node, reference the existing node by name, and pass a `remove` prop to the `<LexicalEditorConfig.Heading.Node>` element:
+To remove a node, reference the existing node by name, and pass a `remove` prop to the `<Heading.Node>` element:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.Node name={"emojiNode"} remove />
+  <Heading.Node name={"emojiNode"} remove />
 </LexicalEditorConfig>
 ```
 
 #### Position a Node {#heading-position-node}
 
-To position your nodes, you can use `before` and `after` props on the `<LexicalEditorConfig.Heading.Node>` element:
+To position your nodes, you can use `before` and `after` props on the `<Heading.Node>` element:
 
 ```jsx apps/admin/src/App.tsx
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  <LexicalEditorConfig.Heading.Node name={"emojiNode"} node={EmojiNode} after={"newNode"} />
-  <LexicalEditorConfig.Heading.Node
-    name={"newNode"}
-    node={NewNode}
-    before={"myExtendedEmojiNode"}
-  />
+  <Heading.Node name={"emojiNode"} node={EmojiNode} after={"newNode"} />
+  <Heading.Node name={"newNode"} node={NewNode} before={"myExtendedEmojiNode"} />
 </LexicalEditorConfig>
 ```
 
