--- a/src/docs/shared/release-notes/5.37.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.2/changelog.mdx
@@ -44,3 +44,18 @@ Previously, the **Scroll to element** feature was only available with the Button
 With this release, the feature has been also brought into the Lexical editor.
 
 <Image src={pbScrollToElementLink} alt={"Scroll To Element Link"} />
+
+## Deployments
+
+### `elasticSearch` Parameter Fixes ([#3488](https://github.com/webiny/webiny-js/pull/3488)) ([#3481](https://github.com/webiny/webiny-js/pull/3481))
+
+With the past [5.36.0 release](/docs/release-notes/5.36.0/changelog#configure-a-shared-elastic-search-domain-via-webiny-application-ts-3308), we've improved the `elasticSearch` parameter that can be specified via the `webiny.application.ts` file. In short, the parameter also allows developers to specify a shared Amazon ElasticSearch cluster, so that it's used with multiple Webiny project deployments, instead of having to create a new cluster for each deployment. This can be useful for development and staging environments, where the data is not critical.
+
+However, a few issues were present with the parameter, and they have now been addressed.
+
+<Alert type="info">
+
+  To learn more about this feature, please refer to the [Using a Shared Amazon Elasticsearch (OpenSearch) Domain](/docs/{exact:5.37.x}/infrastructure/basics/modify-cloud-infrastructure#using-a-shared-amazon-elasticsearch-open-search-domain) article.
+
+</Alert>
+
