chore: remove built-in nodes table

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
@@ -19,7 +19,7 @@ import { Alert } from "@/components/Alert";
 
 Webiny uses [Lexical Editor](https://lexical.dev/) to allow users to create rich text content quickly. Lexical Editor is created by Meta, it’s open source, and very customizable. To learn more about how Lexical Editor works, check the [official docs](https://lexical.dev/docs/intro).
 
-In this article, we'll cover the Lexical Editor configuration for the heading and paragraph elements. The configuration includes toolbar actions, plugins, and Lexical nodes.
+In this article, we'll cover the Lexical Editor configuration for the Heading and Paragraph elements of the Page Builder page editor. The configuration includes toolbar actions, plugins, and Lexical nodes.
 
 <Gallery>
   <Image title="Heading element" src={headingElementLexicalEditor} />
@@ -116,7 +116,7 @@ const { Heading } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
   <Heading.ToolbarAction name={"bold"} element={<MyCustomBoldActon />} />
-</LexicalEditorConfig>
+</LexicalEditorConfig>;
 ```
 
 #### Remove an Action {#heading-remove-action}
@@ -130,7 +130,7 @@ const { Heading } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
   <Heading.ToolbarAction name={"fontSize"} remove />
-</LexicalEditorConfig>
+</LexicalEditorConfig>;
 ```
 
 #### Position an Action {#heading-position-action}
@@ -152,7 +152,7 @@ const { Heading } = LexicalEditorConfig;
 
   {/* Position the existing `fontSize` action after some other action. */}
   <Heading.ToolbarAction name={"fontSize"} after={"myCustomBoldActon"} />
-</LexicalEditorConfig>
+</LexicalEditorConfig>;
 ```
 
 ### Plugins {#heading-plugins}
@@ -262,7 +262,7 @@ const { Heading } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
   <Heading.Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />} />
-</LexicalEditorConfig>
+</LexicalEditorConfig>;
 ```
 
 #### Remove a Plugin {#heading-remove-plugin}
@@ -276,7 +276,7 @@ const { Heading } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
   <Heading.Plugin name={"link"} remove />
-</LexicalEditorConfig>
+</LexicalEditorConfig>;
 ```
 
 #### Position a Plugin {#heading-position-plugin}
@@ -315,11 +315,6 @@ const { Heading } = LexicalEditorConfig;
 ### Nodes {#heading-nodes}
 
 Please read the [official docs](https://lexical.dev/docs/concepts/nodes) to learn what nodes are and why they're important.
-
-<Alert type={"warning"}>
-  Built-in nodes cannot be removed or replaced to avoid existing data corruption. You can only
-  remove or replace your custom nodes, or nodes added by other 3rd party plugins.
-</Alert>
 
 #### Add a Node {#heading-add-node}
 
@@ -385,7 +380,7 @@ const { Heading } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
   <Heading.Node name={"emojiNode"} node={MyExtendedEmojiNode} />
-</LexicalEditorConfig>
+</LexicalEditorConfig>;
 ```
 
 #### Remove a Node {#heading-remove-node}
@@ -399,7 +394,7 @@ const { Heading } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
   <Heading.Node name={"emojiNode"} remove />
-</LexicalEditorConfig>
+</LexicalEditorConfig>;
 ```
 
 #### Position a Node {#heading-position-node}
@@ -414,7 +409,7 @@ const { Heading } = LexicalEditorConfig;
 <LexicalEditorConfig>
   <Heading.Node name={"emojiNode"} node={EmojiNode} after={"newNode"} />
   <Heading.Node name={"newNode"} node={NewNode} before={"myExtendedEmojiNode"} />
-</LexicalEditorConfig>
+</LexicalEditorConfig>;
 ```
 
 ## Paragraph Element
@@ -437,19 +432,3 @@ The Paragraph element is used for writing the main page content. The configurati
 | ImageAction         | `image`         | Open File Manager where the user can select and insert one image at a time.                                                         |
 | LinkAction          | `link`          | Open a pop-up where the user can set the URL and convert the text to a link.                                                        |
 | QuoteAction         | `quote`         | Convert the selected text block to a quote.                                                                                         |
-
-## Built-in Nodes
-
-| Class                 | Name                 |
-| --------------------- | -------------------- |
-| FontColorNode         | `font-color-node`    |
-| ImageNode             | `image`              |
-| ListNode              | `webiny-list`        |
-| ListItemNode          | `webiny-listitem`    |
-| CodeNode              | `code`               |
-| HashtagNode           | `hashtag`            |
-| CodeHighlightNode     | `code-highlight`     |
-| TypographyElementNode | `typography-el-node` |
-| ParagraphNode         | `paragraph-element`  |
-| HeaderNode            | `header-element`     |
-| QuoteNode             | `webiny-quote`       |
