chore: update articles on rich text rendering

--- a/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
@@ -1,5 +1,5 @@
 ---
-title: (Legacy)Render Rich Text Content
+title: (Legacy) Render Rich Text Content
 description: Learn how to render rich text content from Headless CMS.
 ---
 
@@ -7,12 +7,15 @@ import Link from "next/link";
 import { Alert } from "@/components/Alert";
 
 <Alert type="warning">
-  This document covers rendering of rich text content via the legacy Rich Text Editor, which was deprecated with the <Link href={"../../release-notes/5.37.0/changelog"}>5.37.0 release</Link>. For the latest information, please visit the new <Link href={"./render-lexical-rich-text-content"}>Render Rich Text Content</Link> article.
+  This document covers rendering of rich text content via the legacy Rich Text Editor, which was
+  deprecated with the release of <Link href={"../../release-notes/5.37.0/changelog"}>v5.37.0</Link>.
+  For instructions on rendering of the new rich text content, please visit the&nbsp;
+  <Link href={"./render-lexical-rich-text-content"}>Render Rich Text Content</Link> article.
 </Alert>
 
 <Alert type="success" title="What you'll learn">
 
-  - how to render rich text content from Headless CMS in React
+- how to render rich text content from Headless CMS in React
 
 </Alert>
 
@@ -24,7 +27,7 @@ You can render this data as you want by traversing the array and implementing re
 
 <Alert type="info">
 
-  To learn how to use Headless CMS GraphQL API, make sure to check out the [Using GraphQL API](../basics/using-graphql-api) key topic.
+To learn how to use Headless CMS GraphQL API, make sure to check out the [Using GraphQL API](../basics/using-graphql-api) key topic.
 
 </Alert>
 
