--- a/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
@@ -1,40 +1,41 @@
 ---
 title: Render Rich Text Content
-description:  Render rich text content from Headless CMS in custom React app
+description: Render rich text content from Headless CMS in a custom React app.
 ---
 
-import Link from "next/link";
 import { Alert } from "@/components/Alert";
+import { CanIUseThis } from "@/components/CanIUseThis";
 import Image from "next/image";
 import overviewLexicalRenderer from "./assets/overview-lexical-renderer.jpeg";
-import configureLexicalRenderer from "./assets/renderer-configuration.jpeg";
 
-<Alert title="CAN I USE THIS?" type={"info"}>
-  This feature is available since Webiny <b>v5.37.0</b>.
-</Alert>
+<CanIUseThis since={"5.37.0"} />
 
 <WhatYouWillLearn>
-  - How to render rich text content from Headless CMS in a custom React app
+  - wow to render rich text content from Headless CMS in a custom React app
 </WhatYouWillLearn>
 
 ## Overview
-One of the commonly used field type used while creating content models in Webiny's Headless CMS is the rich text field. This field uses [Lexical Rich Text Editor](https://playground.lexical.dev/) to allow users to create nicely formatted rich text content quickly.
 
-<Image src={overviewLexicalRenderer} title="Overview - Render Rich Text Content From Headless CMS" />
- 
-Request the data from the GraphQl API and render the content by use of our predefined React component <b>RichTextLexicalRenderer</b>.
+One of the commonly used field types in Headless CMS content models is the Rich Text field. This field uses [Lexical Rich Text Editor](https://playground.lexical.dev/) to allow users to quickly create nicely formatted rich text content.
+
+<Image src={overviewLexicalRenderer} title="Render Rich Text Content From Headless CMS" />
+
+In this article we cover the steps to render the Headless CMS rich text content by using our React component
+`<RichTextLexicalRenderer/>`, provided by the `@webiny/react-rich-text-lexical-renderer` package.
 
 <Alert type="info">
 
-  To learn how to use Headless CMS GraphQL API, make sure to check out the [Using GraphQL API](../basics/using-graphql-api) key topic.
+To learn how to use Headless CMS GraphQL API, make sure to check out the [Using GraphQL API](../basics/using-graphql-api) key topic.
 
 </Alert>
 
 # Usage
-Rendering content in a custom React app consists of the following three steps:
-1. Installation of the `@webiny/react-rich-text-lexical-renderer` package.
+
+Rendering of rich text content from Headless CMS consists of the following three steps:
+
+1. Install the `@webiny/react-rich-text-lexical-renderer` package.
 2. Add Webiny theme styles to your project.
-3. Mount the `RTLR` component.
+3. Mount the `RichTextLexicalRenderer` component.
 
 ### 1. Installation
 
@@ -44,25 +45,26 @@ In your React app, install the following NPM package:
 npm install --save @webiny/react-rich-text-lexical-renderer
 ```
 
-Or if you prefer yarn:
+Or if you prefer Yarn:
 
 ```
 yarn add @webiny/react-rich-text-lexical-renderer
 ```
 
 ### 2. Add Webiny Theme Styles To Your Project
-To render the same theme styles from the Headless CMS app, copy the `theme.ts` file into your React app.
 
-Here are the steps:
-1. Go to your Webiny project folder.
-2. Access to Webiny `theme.ts` file on this path `/apps/theme/theme.ts`.
-3. Copy the theme styles or the `theme.ts` to your custom React project.
-
-In the next step you can see how you can provide the `theme` styles to the renderer component.
+To use the same theme styles that are configured in your Webiny project, copy the `apps/theme/theme.ts` file into your React app.
 
 ### 3. Mount the component and Render the CMS Content
-Import and mount the `<RichTextLexicalRenderer />` into your page. Next, provide the theme styles, fetch your data from Headless CMS,
-then pass it to the component like this:
+
+Now you need to import and mount the `<RichTextLexicalRenderer />` component in your app, and pass the rich text content, and optionally theme styles.
+
+<Alert type="warning">
+
+Note that in this code sample we do not include the code to load the data from the API. Instead,
+we use the imaginary `useCmsContent()` hook to show where the content _could_ come from.
+
+</Alert>
 
 ```tsx HomePage.tsx
 import React from "react";
@@ -71,53 +73,9 @@ import { useCmsContent } from "../myWebinyGraphqlHooks/useCmsContent";
 import { theme } from "../myWebinyTheme/theme";
 
 export const HomePage = () => {
+  // Fetch rich text content from the Headless CMS GraphQLQ API.
   const { content } = useCmsContent();
-  return (
-    // Mount the component
-    <RichTextLexicalRenderer value={content} theme={theme} />
-  );
+
+  return <RichTextLexicalRenderer value={content} theme={theme} />;
 };
 ```
-
-## Custom Configuration
-
-Sometimes you need a custom content modifications, Webiny allow you to add custom Lexical editor features and render your content with `RichTextLexicalRenderer` component.
-
-<Image src={configureLexicalRenderer} title="Advanced Content Customization And Rendering" />
-
-To render custom Lexical editor configuration from the Headless CMS, you need to start in the following order.
-1. You need to configure Lexical Editor <diagram-letter>A</diagram-letter> in the Headless CMS.
-2. Copy Lexical nodes <diagram-letter>A3</diagram-letter> and theme styles <diagram-letter>A4</diagram-letter> from the Webiny Project 
-to your custom React project <diagram-letter>B</diagram-letter>.
-3. Provide <diagram-letter>B3</diagram-letter> Lexical nodes and <diagram-letter>B4</diagram-letter> theme styles to the renderer component.
-
-<Alert title="LEXICAL CMS CONFIGURATION API" type={"info"}>
-  To learn more about how to configure lexical editor in the Headless CMS application, please read this <Link href={"https://www.webiny.com/docs/page-builder/extending/lexical-editor-configuration-api"} target={"_blank"}>article</Link> and check our <Link href={"https://github.com/webiny/webiny-examples/tree/master/lexical-editor-configuration-api"} target={"_blank"}>example</Link>.
-</Alert>
-
-<Alert title="WEBINY THEME" type={"info"}>
-  To learn more about the Webiny theme customizations check our <Link href={"https://www.webiny.com/docs/page-builder/theming/theme-object"} target={"_blank"}>article</Link>.
-</Alert>
-
-
-### Add node
-
-To render the Lexical nodes from the Headless CMS app, add the same custom Lexical nodes to the renderer component.
-
-```tsx HomePage.tsx
-import React from 'react';
-import { RichTextLexicalRenderer } from "@webiny/react-rich-text-lexical-renderer";
-import { useCmsContent } from "../myWebinyGraphqlHooks/useCmsContent";
-import { theme } from "../myWebinyTheme/theme";
-import { myCustomLexicalNodes } from "../lexical/myCustomLexicalNodes";
-
-export const HomePage = () => {
-  const { content } = useCmsContent();
-  return (
-    // Mount the component
-    <RichTextLexicalRenderer value={content} theme={theme} nodes={[myCustomLexicalNodes]} />
-  );
-}
-```
-
-For more information on Lexical custom nodes, please check out the [Lexical documentation](https://lexical.dev/docs/concepts/nodes).
