fix: correct typo

--- a/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
@@ -11,7 +11,7 @@ import overviewLexicalRenderer from "./assets/overview-lexical-renderer.jpeg";
 <CanIUseThis since={"5.37.0"} />
 
 <WhatYouWillLearn>
-  - wow to render rich text content from Headless CMS in a custom React app
+  - how to render rich text content from Headless CMS in a custom React app
 </WhatYouWillLearn>
 
 ## Overview
