fix: replace "out" with "our"

--- a/src/docs/5.36.x/file-manager/integrations/programmatic-file-upload.mdx
+++ b/src/docs/5.36.x/file-manager/integrations/programmatic-file-upload.mdx
@@ -31,7 +31,7 @@ To make it possible to handle files of all sizes, up to 5TB in size, we have to 
 
 ## Creating an API key
 
-Since the GraphQL API sits behind a security layer, that forbids unauthorized access, we need to create an API key, which we'll then use in out file upload process.
+Since the GraphQL API sits behind a security layer, that forbids unauthorized access, we need to create an API key, which we'll then use in our file upload process.
 
 An API key is a random non-human-readable string, which essentially contains a list of allowed operations that its user (a real user or an application) can perform. Once created, we include it as the `Authorization` header on every HTTP request we issue (with our GraphQL client of choice), for example:
 
