chore: update changelog

--- a/src/docs/shared/release-notes/5.37.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.2/changelog.mdx
@@ -8,8 +8,15 @@ import pbInputsNotUpdating from "./assets/pb-inputs-not-updating.png";
 import pbScrollToElement from "./assets/pb-scroll-to-element.png";
 import pbNewTab from "./assets/pb-new-tab.png";
 import pbScrollToElementLink from "./assets/lexical-scroll-to-element-link-x.png";
+import cmsNewEntryDialog from "./assets/cms-new-entry-dialog.png";
 
 <GithubRelease version={"5.37.2"} />
+
+## Security
+
+### Upgrade `jsonwebtoken` to v9.0.1 ([#3483](https://github.com/webiny/webiny-js/pull/3483))
+
+We've upgraded the `jsonwebtoken` dependency to v9, since there were some security vulnerabilities that were fixed with that release. You can learn more about it in the [official changelog](https://github.com/auth0/node-jsonwebtoken/blob/master/CHANGELOG.md#security-fixes).
 
 ## Page Builder
 
@@ -44,3 +51,11 @@ Previously, the **Scroll to element** feature was only available with the Button
 With this release, the feature has been also brought into the Lexical editor.
 
 <Image src={pbScrollToElementLink} alt={"Scroll To Element Link"} />
+
+## Headless CMS
+
+### Improve the New Entry Modal Dialog ([#3485](https://github.com/webiny/webiny-js/pull/3485))
+
+With the introduction of the advanced content organization in our previous releases, all content is now organized in folders. With this release, we've also added the folder selector to the modal dialog that lets you create new content entries inline, when using the Reference field. Now you will clearly see where the new content entry is located in the associated content model folder hierarchy.
+
+<Image src={cmsNewEntryDialog} alt={"Folder Selector in the New Entry Modal Dialog"} />
