--- a/src/docs/shared/release-notes/5.37.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.2/changelog.mdx
@@ -59,3 +59,18 @@ With this release, the feature has been also brought into the Lexical editor.
 With the introduction of the advanced content organization in our previous releases, all content is now organized in folders. With this release, we've also added the folder selector to the modal dialog that lets you create new content entries inline, when using the Reference field. Now you will clearly see where the new content entry is located in the associated content model folder hierarchy.
 
 <Image src={cmsNewEntryDialog} alt={"Folder Selector in the New Entry Modal Dialog"} />
+
+## Deployments
+
+### `elasticSearch` Parameter Fixes ([#3488](https://github.com/webiny/webiny-js/pull/3488)) ([#3481](https://github.com/webiny/webiny-js/pull/3481))
+
+With the past [5.36.0 release](/docs/release-notes/5.36.0/changelog#configure-a-shared-elastic-search-domain-via-webiny-application-ts-3308), we've improved the `elasticSearch` parameter that can be specified via the `webiny.application.ts` file. In short, the parameter also allows developers to specify a shared Amazon ElasticSearch cluster, so that it's used with multiple Webiny project deployments, instead of having to create a new cluster for each deployment. This can be useful for development and staging environments, where the data is not critical.
+
+However, a few issues were present with the parameter, and they have now been addressed.
+
+<Alert type="info">
+
+  To learn more about this feature, please refer to the [Using a Shared Amazon Elasticsearch (OpenSearch) Domain](/docs/{exact:5.37.x}/infrastructure/basics/modify-cloud-infrastructure#using-a-shared-amazon-elasticsearch-open-search-domain) article.
+
+</Alert>
+
