feat: link the `jsonwebtoken` NPM lib

--- a/src/docs/shared/release-notes/5.37.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.2/changelog.mdx
@@ -16,7 +16,7 @@ import cmsNewEntryDialog from "./assets/cms-new-entry-dialog.png";
 
 ### Upgrade `jsonwebtoken` to v9.0.1 ([#3483](https://github.com/webiny/webiny-js/pull/3483))
 
-We've upgraded the `jsonwebtoken` dependency to v9, since there were some security vulnerabilities that were fixed with that release. You can learn more about it in the [official changelog](https://github.com/auth0/node-jsonwebtoken/blob/master/CHANGELOG.md#security-fixes).
+We've upgraded the [`jsonwebtoken`](https://www.npmjs.com/package/jsonwebtoken) dependency to v9, since there were some security vulnerabilities that were fixed with that release. You can learn more about it in the [official changelog](https://github.com/auth0/node-jsonwebtoken/blob/master/CHANGELOG.md#security-fixes).
 
 ## Page Builder
 
