--- a/src/docs/shared/release-notes/5.37.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.2/changelog.mdx
@@ -18,13 +18,11 @@ import cmsNewEntryDialog from "./assets/cms-new-entry-dialog.png";
 
 We've upgraded the [`jsonwebtoken`](https://www.npmjs.com/package/jsonwebtoken) dependency to v9, since there were some security vulnerabilities that were fixed with that release. You can learn more about it in the [official changelog](https://github.com/auth0/node-jsonwebtoken/blob/master/CHANGELOG.md#security-fixes).
 
-### Sanitize HTML in `@webiny/react-rich-text-renderer` package ([#3477](https://github.com/webiny/webiny-js/pull/3477))
+### HTML Sanitization In `@webiny/react-rich-text-renderer` Package ([#3477](https://github.com/webiny/webiny-js/pull/3477))
+ 
+In order to prevent [cross-site scripting (XSS) attacks](https://en.wikipedia.org/wiki/Cross-site_scripting), the HTML that's rendered by the [legacy rich text editor](/docs/{exact:5.37.x}/headless-cms/integrations/legacy-render-rich-text-content) will now be sanitized, which is done with the help of the [`sanitize-html`](https://www.npmjs.com/package/sanitize-html) library. 
 
-We have improved the security of our [@webiny/react-rich-text-renderer](https://www.npmjs.com/package/@webiny/react-rich-text-renderer) package. 
-When rendering the rich text content, we’re now sanitizing the HTML using the [sanitize-html](https://www.npmjs.com/package/sanitize-html) package, 
-to prevent the possibility of an XSS attack. 
-
-Sanitization can be completely customized, using global configuration, or it can be configured on 
+Sanitization rules can be completely customized, using global configuration, or it can be configured on 
 individual component instances. Read more about the sanitization configuration on [NPM](https://www.npmjs.com/package/@webiny/react-rich-text-renderer).
 
 ## Page Builder
