--- a/src/docs/shared/release-notes/5.37.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.2/changelog.mdx
@@ -20,7 +20,7 @@ We've upgraded the [`jsonwebtoken`](https://www.npmjs.com/package/jsonwebtoken) 
 
 ### HTML Sanitization In `@webiny/react-rich-text-renderer` Package ([#3477](https://github.com/webiny/webiny-js/pull/3477))
  
-In order to prevent [cross-site scripting (XSS) attacks](https://en.wikipedia.org/wiki/Cross-site_scripting), the HTML that's rendered by the [legacy rich text editor](/docs/{exact:5.37.x}/headless-cms/integrations/legacy-render-rich-text-content) will now be sanitized, which is done with the help of the [`sanitize-html`](https://www.npmjs.com/package/sanitize-html) library. 
+In order to further minimize the possibility of [cross-site scripting (XSS) attacks](https://en.wikipedia.org/wiki/Cross-site_scripting), the HTML that's rendered by the [legacy rich text editor](/docs/{exact:5.37.x}/headless-cms/integrations/legacy-render-rich-text-content) will now be sanitized, which is done with the help of the [`sanitize-html`](https://www.npmjs.com/package/sanitize-html) library. 
 
 Sanitization rules can be completely customized, using global configuration, or it can be configured on 
 individual component instances. Read more about the sanitization configuration on [NPM](https://www.npmjs.com/package/@webiny/react-rich-text-renderer).
