wip: add html sanatization topic

--- a/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
@@ -125,6 +125,50 @@ Styles for default renderers are included in the package and you can import them
 
 If you don't want to use the default styles, skip this import and implement your own styling.
 
+## HTML Sanitization
+
+When rendering the rich text content, we’re sanitizing the HTML using the [sanitize-html](https://www.npmjs.com/package/sanitize-html) package,
+to prevent the possibility of an XSS attack.
+
+### Sanitization configuration
+
+Use `configureSanitization` function to set your global sanitization preference.
+To provide sanitize configuration to specific component, use `sanitizationConfig` prop.
+
+Please check `sanitize-html` configuration options on their [GitHub page](https://github.com/apostrophecms/sanitize-html).
+
+```tsx App.tsx
+import {
+  RichTextRenderer,
+  configureSanitization,
+} from "@webiny/react-rich-text-renderer";
+
+const globalSanitizaionConfig = {
+allowedTags: ["b", "i", "em", "strong", "a"],
+allowedAttributes: {
+a: ["href"],
+},
+allowedIframeHostnames: ["www.youtube.com"],
+};
+
+// This is global configuration.
+configureSanitization(globalSanitizaionConfig);
+
+/*
+* Set sanitization configuration options for specific component.
+* Note: Provided configuration will override your global configuration options.
+* */
+const sanitizationConfig = {
+// change the configuration only for this option.
+allowedIframeHostnames: ["www.webiny.com"],
+};
+
+<RichTextRenderer sanitizationConfig={sanitizationConfig}/>;
+```
+<Alert type={"danger"}>
+  Important! Update this component to version 5.37.2 or higher to improve security of your website.
+</Alert>
+
 ## FAQ
 
 ### I'm not using React. How do I render this using other frameworks?
