fix: update content and code prettier formatting

--- a/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
@@ -5,6 +5,7 @@ description: Learn how to render rich text content from Headless CMS.
 
 import Link from "next/link";
 import { Alert } from "@/components/Alert";
+import {CanIUseThis} from "@/components/CanIUseThis";
 
 <Alert type="warning">
   This document covers rendering of rich text content via the legacy Rich Text Editor, which was deprecated with the <Link href={"../../release-notes/5.37.0/changelog"}>5.37.0 release</Link>. For the latest information, please visit the new <Link href={"./render-lexical-rich-text-content"}>Render Rich Text Content</Link> article.
@@ -127,8 +128,7 @@ If you don't want to use the default styles, skip this import and implement your
 
 ## HTML Sanitization
 
-When rendering the rich text content, we’re sanitizing the HTML using the [sanitize-html](https://www.npmjs.com/package/sanitize-html) package,
-to prevent the possibility of an XSS attack.
+In order to minimize the possibility of [cross-site scripting (XSS) attacks](https://en.wikipedia.org/wiki/Cross-site_scripting), the HTML that’s returned by the legacy rich text editor is sanitized, which is done with the help of the [sanitize-html](https://www.npmjs.com/package/sanitize-html) library.
 
 ### Sanitization configuration
 
@@ -137,7 +137,7 @@ To provide sanitize configuration to specific component, use `sanitizationConfig
 
 Please check `sanitize-html` configuration options on their [GitHub page](https://github.com/apostrophecms/sanitize-html).
 
-```tsx App.tsx
+```tsx myView.tsx
 import {
   RichTextRenderer,
   configureSanitization,
@@ -165,9 +165,8 @@ const sanitizationConfig = {
 
 <RichTextRenderer sanitizationConfig={sanitizationConfig} />;
 ```
-<Alert type={"danger"}>
-  Important! Update this component to version 5.37.2 or higher to improve security of your website.
-</Alert>
+
+<CanIUseThis title={"CAN I USE THIS?"} since={"5.37.2"} />
 
 ## FAQ
 
