fix: apply minor fixes

--- a/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
@@ -1,5 +1,5 @@
 ---
-title: (Legacy)Render Rich Text Content
+title: (Legacy) Render Rich Text Content
 description: Learn how to render rich text content from Headless CMS.
 ---
 
@@ -128,14 +128,14 @@ If you don't want to use the default styles, skip this import and implement your
 
 ## HTML Sanitization
 
-In order to minimize the possibility of [cross-site scripting (XSS) attacks](https://en.wikipedia.org/wiki/Cross-site_scripting), the HTML that’s returned by the legacy rich text editor is sanitized, which is done with the help of the [sanitize-html](https://www.npmjs.com/package/sanitize-html) library.
+<CanIUseThis title={"CAN I USE THIS?"} since={"5.37.2"} />
+
+In order to minimize the possibility of [cross-site scripting (XSS) attacks](https://en.wikipedia.org/wiki/Cross-site_scripting), the HTML that’s returned by the rich text editor is sanitized, which is done with the help of the [sanitize-html](https://www.npmjs.com/package/sanitize-html) library.
 
 ### Sanitization configuration
 
 Use `configureSanitization` function to set your global sanitization preference.
 To provide sanitize configuration to specific component, use `sanitizationConfig` prop.
-
-Please check `sanitize-html` configuration options on their [GitHub page](https://github.com/apostrophecms/sanitize-html).
 
 ```tsx myView.tsx
 import {
@@ -166,10 +166,4 @@ const sanitizationConfig = {
 <RichTextRenderer sanitizationConfig={sanitizationConfig} />;
 ```
 
-<CanIUseThis title={"CAN I USE THIS?"} since={"5.37.2"} />
-
-## FAQ
-
-### I'm not using React. How do I render this using other frameworks?
-
-The rendering implementation is really simple and straightforward. You can find the [full code in our repo](https://github.com/webiny/webiny-js/blob/next/packages/react-rich-text-renderer/src/index.tsx). Using that as a reference, you can quickly put together a renderer in the framework of your choice.
+Please check `sanitize-html` configuration options on their [GitHub page](https://github.com/apostrophecms/sanitize-html).
