feat: create 5.37.3 release notes

--- a/src/docs/shared/release-notes/5.37.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.3/changelog.mdx
@@ -8,7 +8,7 @@ description: See what's new in Webiny version 5.37.3.
 
 ## Deployments
 
-### ✍️ Improved ElasticSearch Service IAM Role Creation ([#3500](https://github.com/webiny/webiny-js/pull/3500)) ([#3503](https://github.com/webiny/webiny-js/pull/3503))
+### Improved ElasticSearch Service IAM Role Creation ([#3500](https://github.com/webiny/webiny-js/pull/3500)) ([#3503](https://github.com/webiny/webiny-js/pull/3503))
 
 We've made a couple of improvements to the internal code that's dealing with the creation of the [IAM service-linked role for the Amazon ElasticSearch service](https://docs.aws.amazon.com/opensearch-service/latest/developerguide/slr.html).
 
