feat: create 5.37.3 release notes

--- a/src/docs/shared/release-notes/5.37.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.3/changelog.mdx
@@ -8,6 +8,23 @@ description: See what's new in Webiny version 5.37.3.
 
 ## Deployments
 
+### Data Migrations
+
+We've made several improvements to our data migration process, which will make it easier for you to migrate your data from one Webiny version to another.
+
+#### ✍️ Improved Logging ([#3508](https://github.com/webiny/webiny-js/pull/3508))
+
+✍️
+
+#### Missing `WEBINY_ELASTICSEARCH_INDEX_LOCALE` Environment Variable Causing Data Migrations to Fail  ([#3507](https://github.com/webiny/webiny-js/pull/3507))
+
+Webiny projects that use the **Amazon DynamoDB + Amazon ElasticSearch** [database setup](/docs/{exact:5.37.x}/architecture/introduction#different-database-setups) rely on the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable in order to define names of ElasticSearch indexes Webiny will create and use.
+
+When it comes to data migrations, ideally, they should not be affected by the absence of this environment variable. However, this was not the case, and the migration process would fail if the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable was not present.
+
+With this release, we've addressed this issue. The migration process will now work as expected no matter if the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable is present or not.
+
+
 ### Improved Creation of the IAM Service-linked Role for the Amazon ElasticSearch Service ([#3500](https://github.com/webiny/webiny-js/pull/3500)) ([#3503](https://github.com/webiny/webiny-js/pull/3503))
 
 We've made a couple of improvements to the internal code that handles the initial creation of the [IAM service-linked role for the Amazon ElasticSearch service](https://docs.aws.amazon.com/opensearch-service/latest/developerguide/slr.html).
