feat: create 5.37.3 release notes

--- a/src/docs/shared/release-notes/5.37.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.3/changelog.mdx
@@ -18,7 +18,7 @@ We've made several improvements to our data migration process, which will make i
 
 #### Missing `WEBINY_ELASTICSEARCH_INDEX_LOCALE` Environment Variable Causing Data Migrations to Fail  ([#3507](https://github.com/webiny/webiny-js/pull/3507))
 
-Webiny projects that use the **Amazon DynamoDB + Amazon ElasticSearch** [database setup](/docs/{exact:5.37.x}/architecture/introduction#different-database-setups) rely on the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable in order to define names of ElasticSearch indexes Webiny will create and use.
+Webiny projects that use the **Amazon DynamoDB + Amazon ElasticSearch** [database setup](/docs/{exact:5.37.x}/architecture/introduction#different-database-setups) rely on the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` [environment variable](/docs/{exact:5.37.x}/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale) in order to define names of ElasticSearch indexes Webiny will create and use.
 
 When it comes to data migrations, ideally, they should not be affected by the absence of this environment variable. However, this was not the case, and the migration process would fail if the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable was not present.
 
