feat: create 5.37.3 release notes

--- a/src/docs/shared/release-notes/5.37.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.3/changelog.mdx
@@ -46,3 +46,18 @@ Finally, we've added additional logging to the role creation process, which will
 When deploying a Webiny project into [an existing VPC](/docs/{version}/enterprise/use-existing-amazon-vpc) and with [multi-tenancy](/docs/{version}/enterprise/multi-tenancy) enabled, the deployment of the Website app would fail. More specifically, the deployment of the `website-router-origin-request` Lambda@Edge function would fail, because the underlying code was trying to assign VPC configuration to it, which is not allowed.
 
 This has now been addressed. The `website-router-origin-request` Lambda@Edge function is now deployed without VPC configuration.
+
+### Missing Permission In "Deploy Webiny Project" CloudFormation Template ([#3509](https://github.com/webiny/webiny-js/pull/3509)) 
+
+In order to deploy a Webiny project in a more controlled and secure manner, users can utilize the **Deploy Webiny Project** AWS CloudFormation template. Via three IAM user groups, the template deploys necessary ([least-privilege](https://en.wikipedia.org/wiki/Principle_of_least_privilege)) set of permissions into a specified AWS account, which also automatically get linked with a designated Amazon IAM user.
+
+With this release, we've included one missing IAM permission into the template, which is required for Webiny projects that use the **Amazon DynamoDB + Amazon ElasticSearch** [database setup](/docs/{exact:5.37.x}/architecture/introduction#different-database-setups).
+
+<br/>
+<br/>
+
+<Alert type={"info"}>
+
+  Learn more about the **Deploy Webiny Project** AWS CloudFormation template in our [Configure AWS Credentials](/docs/{exact:5.37.x}/infrastructure/aws/configure-aws-credentials#deploy-webiny-project-aws-cloud-formation-template) article.
+  
+</Alert> 
