chore: update changelog

--- a/src/docs/shared/release-notes/5.37.3/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.3/changelog.mdx
@@ -4,6 +4,8 @@ title: Webiny 5.37.3 Changelog
 description: See what's new in Webiny version 5.37.3.
 ---
 
+import cliLogs from "./assets/cli-logs.png";
+
 <GithubRelease version={"5.37.3"} />
 
 ## Deployments
@@ -12,9 +14,15 @@ description: See what's new in Webiny version 5.37.3.
 
 We've made several improvements to our data migration process, which will make it easier for you to migrate your data from one Webiny version to another.
 
-#### ✍️ Improved Logging ([#3508](https://github.com/webiny/webiny-js/pull/3508))
+#### Improve Access to Migration Logs ([#3508](https://github.com/webiny/webiny-js/pull/3508))
 
-✍️
+Sometimes, data migrations can go wrong, and you need to quickly debug and understand what was the problem. Up until now, you had to dig through AWS CloudWatch logs and figure out the correct log stream to look at. It gets even trickier if you have a large team, and you development team doesn't have access to the AWS account that does the deployment from your CI. 
+
+To streamline this process, we now pull logs from AWS CloudWatch, while the migration Lambda function is running, and we print them to the CLI that is doing the deployment of your Webiny project. This means that the logs will be available in your CI logs. If you're deploying from your local machine, those logs will be printed to your terminal.
+
+On top of that, we also print an exact link to access the relevant AWS CloudWatch log stream, so you no longer need to dig through the console, to find the correct log stream.
+
+<Image src={cliLogs} title="Migration Logs Printed to the CLI"/>
 
 #### Missing `WEBINY_ELASTICSEARCH_INDEX_LOCALE` Environment Variable Causing Data Migrations to Fail  ([#3507](https://github.com/webiny/webiny-js/pull/3507))
 
