fix: use `@webiny/*` with the upgrade command

--- a/src/docs/shared/release-notes/5.37.1/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.37.1/upgrade-guide.mdx
@@ -22,7 +22,7 @@ Make sure to check out the [5.37.1 changelog](./changelog) to get familiar with 
 Upgrade all `@webiny/*` packages by running the following command:
 
 ```bash
-yarn up "@webiny/*@5.37.1"
+yarn up "@webiny/*"
 ```
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.37.1`.
