--- a/src/docs/shared/release-notes/5.37.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.37.0/upgrade-guide.mdx
@@ -40,7 +40,7 @@ The following steps will guide you through the upgrade process. Please note that
 Upgrade all `@webiny/*` packages by running the following command:
 
 ```bash
-yarn up "@webiny/*@5.37.0"
+yarn up "@webiny/*"
 ```
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.37.0`.
