fix: use `@webiny/*` with the upgrade command

--- a/src/docs/shared/release-notes/5.37.3/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.37.3/upgrade-guide.mdx
@@ -17,15 +17,15 @@ Make sure to check out the [5.37.3 changelog](./changelog) to get familiar with 
 
 </Alert>
 
-## 1. Upgrade Webiny Packages
+### 1. Upgrade Webiny Packages
 
-Upgrade all `@webiny/*` packages by running the following command:
+Upgrade all Webiny NPM packages by running the following command:
 
 ```bash
-yarn up "@webiny/*@5.37.3"
+yarn up "@webiny/*"
 ```
 
-Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.37.3`.
+Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should print **5.37.0** (or the latest 5.37.x patch release version, for example **5.37.5**).
 
 ## 2. Deploy Your Project
 
