--- a/src/docs/shared/release-notes/5.37.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.37.0/upgrade-guide.mdx
@@ -37,13 +37,13 @@ The following steps will guide you through the upgrade process. Please note that
 
 ### 1. Upgrade Webiny Packages
 
-Upgrade all `@webiny/*` packages by running the following command:
+Upgrade all Webiny NPM packages by running the following command:
 
 ```bash
 yarn up "@webiny/*"
 ```
 
-Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.37.0`.
+Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should print **5.37.0** (or the latest 5.37.x patch release version, for example **5.37.5**).
 
 ### 2. Run the Upgrade Command
 
