fix: use `@webiny/*` with the upgrade command

--- a/src/docs/shared/release-notes/5.37.2/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.37.2/upgrade-guide.mdx
@@ -17,15 +17,21 @@ Make sure to check out the [5.37.2 changelog](./changelog) to get familiar with 
 
 </Alert>
 
-### 1. Upgrade Webiny Packages
+## 1. Upgrade Webiny Packages
 
 Upgrade all Webiny NPM packages by running the following command:
 
 ```bash
-yarn up "@webiny/*"
+yarn up "@webiny/*@5.37.3"
 ```
 
-Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should print **5.37.0** (or the latest 5.37.x patch release version, for example **5.37.5**).
+<Alert type={"danger"}>
+
+  Note the `5.37.3` version in the command above. We strongly recommend users to immediately upgrade to the latest patch version, as with [this release](/docs/release-notes/5.37.3/changelog), we've addressed an important data migrations-related issue.
+
+</Alert>
+
+Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.37.3**.
 
 ## 2. Deploy Your Project
 
