--- a/src/docs/shared/release-notes/5.37.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.37.0/upgrade-guide.mdx
@@ -40,10 +40,16 @@ The following steps will guide you through the upgrade process. Please note that
 Upgrade all Webiny NPM packages by running the following command:
 
 ```bash
-yarn up "@webiny/*"
+yarn up "@webiny/*@5.37.3"
 ```
 
-Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should print **5.37.0** (or the latest 5.37.x patch release version, for example **5.37.5**).
+<Alert type={"danger"}>
+
+  Note the `5.37.3` version in the command above. We strongly recommend users to immediately upgrade to the latest patch version, as with [this release](/docs/release-notes/5.37.3/changelog), we've addressed an important data migrations-related issue.
+  
+</Alert>
+
+Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.37.3**.
 
 ### 2. Run the Upgrade Command
 
