--- a/src/docs/shared/messages/how-to-cloudwatch.mdx
+++ b/src/docs/shared/messages/how-to-cloudwatch.mdx
@@ -6,16 +6,31 @@ description:
 ---
 
 import cwLogs from "./assets/cw-logs.png"
+import logsInsights from "./assets/logs-insights.png"
 
-From time to time, for debugging purposes, developers might need to access runtime logs for one or more [AWS Lambda](https://aws.amazon.com/lambda/) functions that Webiny deploys. The following steps show how to use [Amazon CloudWatch](https://aws.amazon.com/cloudwatch/) to access logs for a specific AWS Lambda function.
+From time to time, for development purposes, developers might need to access runtime logs for one or more [AWS Lambda](https://aws.amazon.com/lambda/) functions that Webiny deploys. This guide shows how to access these logs. 
+
+## CloudWatch Logs
+
+The first way of accessing logs is by using [CloudWatch Logs](https://docs.aws.amazon.com/AmazonCloudWatch/latest/logs/WhatIsCloudWatchLogs.html):
 
 1. Open [CloudWatch Management Console](https://console.aws.amazon.com/cloudwatch/home).
 2. Click on **Log groups** in the left-hand menu.
-3. Click on the log group that corresponds to the function you want to view logs for. You can also use the search bar to quickly find the log group you're looking for. 
-4. Click on the log stream that corresponds to the function you want to view logs for.
+3. Click on the log group that corresponds to the function you want to view logs for (logs are grouped by function name). You can also use the search bar to quickly find the log group you're looking for. For example, you can type **graphql** to find the log group that contains logs for Webiny's GraphQL API. 
+4. Select a log stream. Note that, usually, there is more than one log stream for a function, so you will need to select the one that corresponds to the time period you're interested in.
 5. You should now see the logs for the Lambda function you selected.
 
 <Image src={cwLogs} alt="CloudWatch Logs" />
+
+## CloudWatch Logs Insights
+
+Another way of viewing logs is by using [CloudWatch Logs Insights](https://docs.aws.amazon.com/AmazonCloudWatch/latest/logs/AnalyzingLogData.html).
+
+CloudWatch Logs Insights enables you to interactively search and analyze your log data in Amazon CloudWatch Logs. You can perform queries to help you quickly and efficiently respond to operational issues. 
+
+CloudWatch Logs Insights can be accessed from the [CloudWatch Management Console](https://console.aws.amazon.com/cloudwatch/home). To access it, click on **Logs Insights** in the left-hand menu. You will be presented with a query editor via which you can then perform queries. 
+
+<Image src={logsInsights} alt="CloudWatch Logs Insights" />
 
 ## FAQ
  
@@ -46,7 +61,3 @@ The log group you're looking for is called `/aws/lambda/{prefix}-data-migration-
   Type **data-migration** in the search bar to quickly find the log group.
 
 </Alert>
-
-### I can see multiple log groups for the same function. Which one should I use?
-
-If you have multiple Webiny deployments in the same AWS account, you will see multiple log groups for the same function. The log group you're looking for is the one that corresponds to the deployment you want to view logs for. 
