feat: create 5.37.4 release notes

--- a/src/docs/shared/release-notes/5.37.4/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.4/changelog.mdx
@@ -40,7 +40,7 @@ We've fixed a little bug with data not being correctly reset when the API return
 
 ### Escape Slashes in Elasticsearch Queries ([#3515](https://github.com/webiny/webiny-js/pull/3515))
 
-When using slashes in search queries with Elasticsearch, those slashes were incorrectly escaped, causing parsing errors. this is now fixed and slashes are safe to use in search queries. For full details on the issues, please visit [this PR](https://github.com/webiny/webiny-js/pull/3515) on Github.
+When using slashes in search queries with Elasticsearch, those slashes were incorrectly escaped, causing parsing errors. This is now fixed and slashes are safe to use in search queries. For full details on the issues, please visit [this PR](https://github.com/webiny/webiny-js/pull/3515) on Github.
 
 ### Ensure _templateId Exists on Create/Update Mutation Return Value ([#3532](https://github.com/webiny/webiny-js/pull/3532))
 
