docs: added note that once user made database selection in setup, it cannot be changed later

--- a/src/docs/5.28.x/get-started/install-webiny.mdx
+++ b/src/docs/5.28.x/get-started/install-webiny.mdx
@@ -43,6 +43,10 @@ From there, follow the on-screen setup instructions, which includes answering a 
 Webiny supports two storage types at the moment: **DynamoDB** and **DynamoDB+Elasticsearch**.
 Choose which ever suits your needs more. Please, keep reading to find out more about the storage types...
 
+<Alert type="info">
+Please choose your database with consideration for both present and future project requirements, as once you've made your selection, it cannot be changed later.
+</Alert>
+
 <TabsComponent>
   <TabsItem title="DynamoDB">
 
